src/objects/Product_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Product Group Members (Product Group)</relationshipLabel>
        <relationshipName>Product_Group_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Group Members</relationshipLabel>
        <relationshipName>Product_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Group Member</label>
    <nameField>
        <label>Product Group Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>